fix to support bottom aligning dropdowns (need to dropup in that case)

--- a/components/AbsoluteMenu/AbsoluteMenu.module.css
+++ b/components/AbsoluteMenu/AbsoluteMenu.module.css
@@ -75,3 +75,7 @@
   right: 0;
   left: auto;
 }
+.up_align_content {
+  bottom: 60px;
+  z-index: 1;
+}
